# LLM_Dalux

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  main.py  orchestration.py  pyproject.toml  pytest.ini
.github/workflows/: deploy-azure.yml  tests.yml
adapters/: dalux_adapter.py
app/: config.py  main.py  orchestration.py
app/adapters/: dalux_adapter.py
app/language_model/clients/: base_client.py  claude_client.py
app/language_model/prompts/: dalux_context.py  system_prompt.py
app/mcp_dalux/: config.py  logging_setup.py  main.py  mcp_app.py  mcp_setup.py  orchestration.py  session_models.py
app/mcp_dalux/adapters/: dalux_adapter.py
app/mcp_dalux/api/: __init__.py  app.py  auth.py  routes_health.py  routes_sessions.py  schemas.py
app/mcp_dalux/client_tools/: dalux_tools_tasks.py  dalux_tools_users.py  dalux_tools_workpackages.py  tool_execution.py  tool_presenters.py
app/mcp_dalux/clients/: client_factory.py  contracts.py  decision_service.py
app/mcp_dalux/language_model/: client_factory.py  decision_service.py
app/mcp_dalux/llm/: client_factory.py  contracts.py
app/mcp_dalux/policies/: input_policy.py  tool_policy.py
app/mcp_dalux/services/: __init__.py  prompt_service.py  session_service.py
app/mcp_dalux/tools/: dalux_tools.py  (+5 more)
app/policies/: input_policy.py
language_model/clients/: base_client.py  claude_client.py
language_model/prompts/: dalux_context.py  system_prompt.py
policies/: input_policy.py
tests/: conftest.py  test_dalux_adapter_live.py  test_dalux_adapter_unit.py
tools/: dalux_tools.py
(+45 files in other folders)
