[project]
name = "mcp-dalux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.52.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
    "google-genai>=1.0.0",
    "pydantic>=2.12.5",
    "ruff>=0.15.9",
    "tzdata>=2026.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "respx>=0.23.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
include = ["mcp_dalux*"]
